unpackaged/main/default/objects/OutletLocale__c/OutletLocale__c.object-meta.xml
<CustomObject>
    <label>Outlet Locale</label>
    <nameField>
        <displayFormat>OL-{0000}</displayFormat>
        <label>Outlet Locale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Locales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>