unpackaged/main/default/objects/OutletLocale__c/fields/OLCountry__c.field-meta.xml
<CustomField>
    <fullName>OLCountry__c</fullName>
    <label>OLCountry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>