unpackaged/main/default/objects/OutletLocale__c/fields/OLRequired__c.field-meta.xml
<CustomField>
    <fullName>OLRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OLRequired</label>
    <type>Checkbox</type>
</CustomField>