unpackaged/main/default/objects/OutletLocale__c/fields/OLType__c.field-meta.xml
<CustomField>
    <fullName>OLType__c</fullName>
    <label>OLType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Enable</fullName>
            </value>
            <value>
                <fullName>Disable</fullName>
            </value>
            <value>
                <fullName>Enable &amp; Add</fullName>
            </value>
            <value>
                <fullName>Disable &amp; Remove</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show &amp; Add</fullName>
            </value>
            <value>
                <fullName>Hide &amp; Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>