unpackaged/main/default/objects/OutletLocale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OLCountry__c</columns>
    <columns>OLProduct__c</columns>
    <columns>OLType__c</columns>
    <columns>OLRequired__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>